<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4" >


    <TextView
        android:id="@+id/boss"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/boss_name"
        android:layout_width="200dp"
        android:layout_row="2"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/itemName"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:textSize="25dp"
        android:text="@string/item_name"
        android:layout_row="0"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/charName"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="15dp"
        android:text="@string/Character_name"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:id="@+id/slot"
        android:layout_marginLeft="15dp"
        android:layout_width="130dp"
        android:text="@string/slot"
        android:layout_row="1"
        android:layout_column="1"/>

</GridLayout>