<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2" >

    <ImageView
        android:id="@+id/photoclient"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/personagemName"
        android:layout_gravity="fill_horizontal"
        android:layout_height="38dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textSize="35dp"
        android:text="@string/Character_name" />

    <TextView
        android:id="@+id/classe"
        android:layout_height="wrap_content"
        android:text="@string/Class"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_width="110dp" />

    <TextView
        android:id="@+id/spec"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        android:text="@string/Spec" />
</GridLayout>