<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/nomeitem"
        android:hint="@string/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/personagemName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/nomeitem"
        android:hint="@string/Class"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/boss"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/personagemName"
        android:hint="@string/boss_name"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/slot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/boss"
        android:hint="@string/slot"
        android:inputType="text"/>


    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/Cancel'
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/buttonSalvar"
        />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/Save'
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/buttonDelete"

        />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/Delete'
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"

        />


</RelativeLayout>