<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    >


    <EditText
        android:id="@+id/nomeitem"
        android:hint="@string/Item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SelectChar"
        android:layout_below="@+id/nomeitem"
        />
    <Spinner
        android:id="@+id/personagemName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/tx1"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tx2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SelectBoss"
        android:layout_below="@+id/personagemName"
        />
    <Spinner
        android:id="@+id/boss"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/tx2"
        android:hint="@string/SelectBoss"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tx3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SelectSlot"
        android:layout_below="@+id/boss"
        />
    <Spinner
        android:id="@+id/slot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/tx3"
        android:hint="@string/SelectSlot"
        android:inputType="text"/>


    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/Cancel'
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/buttonCadastrar"


        />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/CadChar2'
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>