<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtSearchBoss"
        android:hint="@string/Search_by_Boss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/SearchBoss"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/nomechar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_searchboss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Search"
        android:layout_gravity="right"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        />

    <TextView
        android:id="@+id/txtSearchChar"
        android:hint="@string/Search_by_Char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/Searchchar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/nomechar"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_searchchar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Search"
        android:layout_marginRight="25dp"
        android:layout_gravity="right"
        />


</LinearLayout>