<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    >



    <EditText
        android:id="@+id/nomechar"
        android:hint="@string/Character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Selecione a Classe:"
        android:layout_below="@+id/nomechar"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Selecione a Especialização:"
        android:layout_below="@+id/classe"
        android:layout_marginBottom="10dp"
        />

    <Spinner
        android:id="@+id/spec"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/classe"
        android:hint="@string/Spec"
        android:inputType="text"/>


    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/Cancel'
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/buttonCadastrar"


        />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text='@string/CadChar2'
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"

         />

    <Spinner
        android:id="@+id/classe"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/Class"
        android:inputType="text"
        android:layout_below="@+id/nomechar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>